--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "sd-0x-project-trybewallet",
+  "homepage": "https://ImVictorM.github.io/Trybewallet",
   "version": "1.0.0",
   "private": true,
   "engines": {
@@ -29,6 +30,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "test-coverage": "react-scripts test --coverage --watchAll=false",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx",
     "lint:styles": "npx stylelint '**/*.css'"
@@ -53,6 +56,7 @@
     "cypress": "10.4.0",
     "cypress-multi-reporters": "1.6.1",
     "eslint-config-trybe-frontend": "^1.3",
+    "gh-pages": "^4.0.0",
     "jest-localstorage-mock": "2.4.21",
     "mocha": "10.0.0",
     "mochawesome": "7.1.3",
